# dataformer

./: Dockerfile  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/components/data/: Data.js  DataInput.js  DataOutput.js
frontend/src/components/pipeline/: Pipeline.js
frontend/src/components/pipeline/commands/: AggregationCommandContent.js  AppendLineCommandContent.js  CodeCommandContent.js  CountUniqueWordsCommandContent.js  FilterColsCommandContent.js  FilterColumnNamesCommandContent.js  FilterRowsCommandContent.js  FilterSeparatedValuesCommandContent.js  ImputeCommandContent.js  ListwiseDeletionCommandContent.js  PrependLineCommandContent.js  RemoveDuplicatesCommandContent.js  RemoveHeaderCommandContent.js  ReplaceCommandContent.js  SortRowsCommandContent.js  WrapCommandContent.js
frontend/src/components/sidebar/: Sidebar.js  SidebarGroup.js
frontend/src/state/: AggregationCommand.tsx  AppendLineCommand.tsx  CodeCommand.tsx  Command.tsx  CountUniqueWordsCommand.tsx  FilterColsCommand.tsx  FilterColumnNamesCommand.tsx  FilterRowsCommand.tsx  FilterSeparatedValuesCommand.tsx  ImputeCommand.tsx  ListwiseDeletionCommand.tsx  PrependLineCommand.tsx  RemoveDuplicatesCommand.tsx  RemoveHeaderCommand.tsx  ReplaceCommand.tsx  SortRowsCommand.tsx  State.tsx  WrapCommand.tsx
frontend/src/utils/: resizing.js  windowSize.js
server/: __init__.py
server/api/: __init__.py  execute.py
