[tool.poetry]
name = "dataformer"
version = "0.1.0"
description = ""
authors = ["Adam Dejl <adam.dejl18@imperial.ac.uk>", "Sergio Perez <sperez23@mit.edu>", "Evan Rubel <erubel@mit.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
Flask-RESTful = "^0.3.9"
wheel = "^0.37.1"
gunicorn = "^20.1.0"
pypyp = "^1.0.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
